[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=2]
[ext_resource path="res://braço.png" type="Texture" id=3]
[ext_resource path="res://corpo_robo.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.25, 100.172 )

[node name="Node2D" type="Node2D"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 350 )
scale = Vector2( 0.571782, 0.571782 )
texture = ExtResource( 4 )

[node name="braço" type="KinematicBody2D" parent="."]
position = Vector2( 512, 350 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="braço"]
position = Vector2( -1.655, -84.8279 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="braço"]
position = Vector2( -1.65503, -82.4058 )
scale = Vector2( 0.489766, 0.387646 )
texture = ExtResource( 3 )

[node name="garra" type="Sprite" parent="braço"]
modulate = Color( 0.592157, 0.133333, 0.133333, 1 )
position = Vector2( -3, -275 )
texture = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="braço"]

[node name="Timer" type="Timer" parent="braço"]
wait_time = 2.0
autostart = true

[node name="Timer2" type="Timer" parent="braço"]
wait_time = 7.0
autostart = true

[connection signal="request_completed" from="braço/HTTPRequest" to="braço" method="_on_HTTPRequest_request_completed"]
[connection signal="timeout" from="braço/Timer" to="braço" method="_on_Timer_timeout"]
[connection signal="timeout" from="braço/Timer2" to="braço" method="_on_Timer2_timeout"]
